lang.java.statics.test/tests/positive/classes/nested/qualifiedthis.yes.javtest
STATIX ok
JAVAC  ok

[A]
public class A {
    public class B {
        public void m() {
             A a = A.this;
        }
    }
}
